# dudki

./: .gitignore  COPYING  Makefile.am  NEWS  NEWS.xml  autogen.sh  configure.ac
debian/: changelog  control  dudki.conf  dudki.default  dudki.init  dudki.install  dudki.postinst  dudki.postrm  rules
man/: .gitignore  Makefile.am  dudki.8.in  dudki.conf.5.in
src/: .gitignore  Makefile.am  configuration.cc  configuration.h  dudki.cc  process.cc  process.h  util.cc  util.h
